# lfx-v1-sync-helper

./: .cspell.json  .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .lycheeignore  .mega-linter.yml  .secretlintignore  .yamllint  .yamllint.yml  AGENTS.md  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ko-build-main.yaml  ko-build-tag.yaml  mega-linter.yml  publish-main.yaml  publish-release.yaml
charts/lfx-v1-sync-helper/: Chart.yaml  README.md  values.yaml
cmd/dynamodb-stream-consumer/: README.md  config.go  main.go  publisher.go
cmd/lfx-v1-sync-helper/: README.md  client_committees.go  client_projects.go  config.go  handlers.go  handlers_committees.go  main.go  (+18 more)
docker/: Dockerfile.meltano
manifests/: dynamodb-list-tables-job.yaml  meltano-dragon-job.yaml  meltano-el-postgres-cronjob.yaml  meltano-el-postgres.yaml  meltano-list-state.yaml
meltano/: .dockerignore  Dockerfile  README.md  meltano.yml
meltano/load/target-nats-kv/: README.md  config-example-json.json  config-example-msgpack.json  pyproject.toml
meltano/load/target-nats-kv/src/target_nats_kv/: __init__.py
research/: meetings-v1-vs-v2.md  meetings-v1.md  meetings-v2.md
scripts/: generate-catalog-configmaps.sh
v1-sync-helper/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  client_committees.go  client_projects.go  config.go  go.mod  go.sum  handlers.go  handlers_committees.go  handlers_meetings.go  handlers_projects.go  helper_meetings.go  lfx_v1_client.go  lfx_v2_client.go  main.go  models_meetings.go  nats_client.go  username_mapping.go
(+9 files in other folders)
